[tool.poetry]
name = "repl-nix-new-repl-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"
psycopg2-binary = "^2.9.9"
scikit-learn = "^1.5.2"
numpy = "^2.1.1"
flask-mail = "^0.10.0"
flask-apscheduler = "^1.13.1"
email-validator = "^2.2.0"
flask-migrate = "^4.0.7"
flask-talisman = "^1.1.0"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"
werkzeug = "^3.0.4"
wtforms = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
