[tool.poetry]
name = "repl-nix-new-repl-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.2"
flask-sqlalchemy = "3.0.5"
flask-wtf = "1.1.1"
flask-login = "0.6.2"
psycopg2-binary = "2.9.6"
scikit-learn = "1.3.0"
numpy = "1.25.1"
flask-mail = "0.9.1"
flask-apscheduler = "1.12.4"
email-validator = "2.0.0"
flask-migrate = "4.0.4"
flask-talisman = "1.0.0"
gunicorn = "20.1.0"
python-dotenv = "1.0.0"
sqlalchemy = "^2.0.35"
werkzeug = "^3.0.4"
wtforms = "^3.1.2"
flask-limiter = "3.3.1"
flask-caching = "2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
