[tool.poetry]
name = "repl-nix-new-repl-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.5"
flask-sqlalchemy = "3.0.2"
flask-wtf = "1.1.1"
flask-login = "0.6.2"
psycopg2-binary = "2.9.7"
scikit-learn = "1.3.1"
numpy = "1.25.2"
flask-mail = "0.9.1"
flask-apscheduler = "1.12.4"
email-validator = "2.0.0"
flask-migrate = "4.0.4"
flask-talisman = "1.1.0"
gunicorn = "21.2.0"
python-dotenv = "1.0.0"
sqlalchemy = "^2.0.35"
werkzeug = "2.2.3"
wtforms = "^3.1.2"
flask-limiter = "3.5.0"
flask-caching = "2.0.2"
imap-tools = "1.0.0"
anthropic = "^0.34.2"
chardet = "^5.2.0"
cryptography = "^43.0.3"
apscheduler = "^3.10.4"
alembic = "^1.13.3"
click = "^8.1.7"
psutil = "^6.1.0"
stripe = "^11.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
